# cgal-swig-bindings

./: .gitignore  .gitmodules  BUILD.md  README.md  build-linux-wheel.sh  setup.py
.github/workflows/: auto-refresh-dependabot.yml  build-wheels.yml  tests.yml
SWIG_CGAL/Point_set_processing_3/: CGAL_Point_set_processing_3.i  CMakeLists.txt  functions.h
examples/python/: Point_set_registration_example.py  test_registration_install.py
